[workspace]
members = [
    "cli",
    "lib",
    "crates/adapter",
    "crates/adapter/byte-array-literals",
]
resolver = "2"

# Exclude our integration test fixtures, which need to be compiled to wasm
# (managed by the Makefile)
exclude = [
    "test-fixtures",
]

# Specify `cli` as the default workspace member to operate on. This means that
# commands like `cargo run` will run the CLI binary by default.
# See: https://doc.rust-lang.org/cargo/reference/workspaces.html#package-selection
default-members = [ "cli" ]

[profile.dev]
# Since some of the integration tests involve compiling Wasm, a little optimization goes a long way
# toward making the test suite not take forever
opt-level = 1

[workspace.dependencies]
anyhow = "1.0.31"
base64 = "0.21.2"
clap = { version = "^4.0.18", features = ["derive"] }
hyper = { version = "=0.14.26", features = ["full"] }
itertools = "0.10.5"
rustls = { version = "0.21.5", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.3"
serde_json = "1.0.59"
tokio = { version = "1.21.2", features = ["full"] }
tokio-rustls = "0.24.1"
tracing = "0.1.37"
tracing-futures = "0.2.5"
futures = "0.3.24"
url = "2.3.1"

# Wasmtime dependencies
wasmtime = "22.0.0"
wasmtime-wasi = "22.0.0"
wasmtime-wasi-nn = "22.0.0"
wiggle = "22.0.0"
wat = "1.212.0"
wasmparser = "0.208.0"
wasm-encoder = { version = "0.208.0", features = ["wasmparser"] }
wit-component = "0.208.0"

# Adapter dependencies
byte-array-literals = { path = "crates/adapter/byte-array-literals" }
bitflags = { version = "2.5.0", default-features = false }
object = { version = "0.33", default-features = false, features = ["archive"] }
wasi = { version = "0.11.0", default-features = false }
wit-bindgen-rust-macro = { version = "0.25.0", default-features = false }

[profile.release.package.viceroy-component-adapter]
opt-level = 's'
strip = 'debuginfo'

[profile.dev.package.viceroy-component-adapter]
# Make dev look like a release build since this adapter module won't work with
# a debug build that uses data segments and such.
incremental = false
opt-level = 's'
# Omit assertions, which include failure messages which require string
# initializers.
debug-assertions = false
# Omit integer overflow checks, which include failure messages which require
# string initializers.
overflow-checks = false
