[package]
name = "viceroy-lib"
version = "0.14.4"
description = "Viceroy implementation details."
authors = ["Fastly"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://docs.rs/viceroy-lib"
homepage = "https://github.com/fastly/Viceroy"
repository = "https://github.com/fastly/Viceroy"
keywords = ["wasm", "fastly"]
categories = [
    "development-tools",
    "network-programming",
    "simulation",
    "wasm"
]
include = [
    "CHANGELOG.md",
    "SECURITY.md",
    "src/**/*",
    "wasm_abi/wit/**/*",
    "wasm_abi/compute-at-edge-abi/**/*.witx",
    "wasm_abi/data/*.wasm",
]
# MSRV: 1.82 for is_none_or
rust-version = "1.82"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.59"
bytes = "^1.2.1"
bytesize = "^1.1.0"
cfg-if = "^1.0"
clap = { workspace = true }
cranelift-entity = "^0.122.0"
fastly-shared = "^0.11.5"
flate2 = "^1.0.24"
futures = { workspace = true }
http = "^0.2.8"
http-body = "^0.4.5"
hyper = { workspace = true }
itertools = { workspace = true }
lazy_static = "^1.4.0"
pin-project = { workspace = true }
regex = "^1.3.9"
rustls = "^0.21.1"
rustls-native-certs = "^0.6.3"
rustls-pemfile = "^1.0.3"
semver = "^0.10.0"
serde = "^1.0.145"
serde_derive = "^1.0.114"
serde_json = { workspace = true }
thiserror = "^1.0.37"
tokio = { workspace = true }
tokio-rustls = "^0.24.1"
toml = "^0.5.9"
tracing = { workspace = true }
tracing-futures = { workspace = true }
url = { workspace = true }
wasmparser = { workspace = true }
wasm-encoder = { workspace = true }
wit-component = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-nn = { workspace = true }
wat = { workspace = true }
wiggle = { workspace = true }
base64 = { workspace = true }
moka = { version = "0.12.11", features = ["future"] }

[dev-dependencies]
proptest = "1.6.0"
proptest-derive = "0.5.1"
tempfile = "3.6.0"

[features]
default = []
test-fatalerror-config = []

[workspace]
members = [
    "cli",
]
resolver = "3"

# Exclude our integration test fixtures, which need to be compiled to wasm
# (managed by the Makefile)
exclude = [
    "test-fixtures",
]

# Specify `cli` as the default workspace member to operate on. This means that
# commands like `cargo run` will run the CLI binary by default.
# See: https://doc.rust-lang.org/cargo/reference/workspaces.html#package-selection
default-members = [ "cli" ]

[profile.dev]
# Since some of the integration tests involve compiling Wasm, a little optimization goes a long way
# toward making the test suite not take forever
opt-level = 1

[workspace.dependencies]
anyhow = "1.0.31"
base64 = "0.21.2"
clap = { version = "^4.0.18", features = ["derive"] }
hyper = { version = "=0.14.26", features = ["full"] }
itertools = "0.10.5"
pin-project = "1.0.8"
rustls = { version = "0.21.5", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.3"
serde_json = "1.0.59"
tokio = { version = "1.21.2", features = ["full"] }
tokio-rustls = "0.24.1"
tracing = "0.1.37"
tracing-futures = "0.2.5"
futures = "0.3.24"
url = "2.3.1"

# Wasmtime dependencies
wasmtime = { version =  "35.0.0", features = ["call-hook"] }
wasmtime-wasi = "35.0.0"
wasmtime-wasi-nn = "35.0.0"
wiggle = "35.0.0"
wat = "1.212.0"
wasmparser = "0.236.0"
wasm-encoder = { version = "0.236.0", features = ["wasmparser"] }
wit-component = "0.236.0"
