[package]
name = "viceroy"
description = "Viceroy is a local testing daemon for Compute@Edge."
version = "0.4.2"
authors = ["Fastly"]
readme = "../README.md"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://developer.fastly.com/learning/compute/testing/#running-a-local-testing-server"
homepage = "https://developer.fastly.com/learning/compute/"
repository = "https://github.com/fastly/Viceroy"
keywords = ["wasm", "fastly"]
categories = [
  "command-line-utilities",
  "development-tools",
  "network-programming",
  "simulation",
  "wasm"
]
include = [
    "../README.md",
    "../CHANGELOG.md",
    "../SECURITY.md",
    "../doc/logo.png",
    "src/**/*"
]

[[bin]]
name = "viceroy"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.31"
hyper = { version = "^0.14.20", features = ["full"] }
itertools = "^0.10.5"
serde_json = "^1.0.59"
clap = { version = "^4.0.18", features = ["derive"] }
tokio = { version = "^1.21.2", features = ["full"] }
tracing = "^0.1.37"
tracing-futures = "^0.2.5"
tracing-subscriber = { version = "^0.3.16", features = ["env-filter", "fmt"] }
viceroy-lib = { path = "../lib", version = "^0.4.2" }
wat = "^1.0.38"

[dev-dependencies]
anyhow = "^1.0.31"
futures = "^0.3.24"
url = "^2.3.1"
