[package]
name = "viceroy"
description = "Viceroy is a local testing daemon for Fastly Compute."
version = "0.10.3"
authors = ["Fastly"]
readme = "../README.md"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://developer.fastly.com/learning/compute/testing/#running-a-local-testing-server"
homepage = "https://developer.fastly.com/learning/compute/"
repository = "https://github.com/fastly/Viceroy"
keywords = ["wasm", "fastly"]
categories = [
  "command-line-utilities",
  "development-tools",
  "network-programming",
  "simulation",
  "wasm"
]
include = [
    "../README.md",
    "../CHANGELOG.md",
    "../SECURITY.md",
    "../doc/logo.png",
    "src/**/*"
]

[[bin]]
name = "viceroy"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
hyper = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
serial_test = "^2.0.0"
clap = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tls-listener = { version = "^0.7.0", features = ["rustls", "hyper-h1", "tokio-net", "rt"] }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { version = "^0.3.16", features = ["env-filter", "fmt"] }
viceroy-lib = { path = "../lib", version = "=0.10.3" }
wat = "^1.0.38"
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
libc = "^0.2.139"

[dev-dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
