[package]
name = "viceroy"
description = "Viceroy is a local testing daemon for Fastly Compute."
version = "0.18.1"
authors = ["Fastly"]
readme = "../README.md"
edition = "2024"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://developer.fastly.com/learning/compute/testing/#running-a-local-testing-server"
homepage = "https://developer.fastly.com/learning/compute/"
repository = "https://github.com/fastly/Viceroy"
keywords = ["wasm", "fastly"]
categories = [
  "command-line-utilities",
  "development-tools",
  "network-programming",
  "simulation",
  "wasm"
]
include = [
    "../README.md",
    "../CHANGELOG.md",
    "../SECURITY.md",
    "../doc/logo.png",
    "src/**/*"
]

# Install prebuilt binaries from GitHub releases instead of compiling.
# Release assets are named e.g. `viceroy_v0.18.1_linux-amd64.tar.gz` and contain
# a single `viceroy` binary at the archive root.
[package.metadata.binstall]
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/viceroy_v{ version }_darwin-amd64.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/viceroy_v{ version }_darwin-arm64.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/viceroy_v{ version }_linux-amd64.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/viceroy_v{ version }_linux-arm64.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/viceroy_v{ version }_windows-amd64.tar.gz"

[[bin]]
name = "viceroy"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
hyper = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "^0.3.16", features = ["env-filter", "fmt"] }
viceroy-lib = { path = "..", version = "=0.18.1" }
wat = "^1.0.38"
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
libc = "^0.2.139"

[dev-dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
tls-listener = { version = "^0.7.0", features = ["rustls", "hyper-h1", "tokio-net", "rt"] }
tempfile = "3"
serde_json = { workspace = true }
