[package]
name = "viceroy-lib"
version = "0.4.6"
description = "Viceroy implementation details."
authors = ["Fastly"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://docs.rs/viceroy-lib"
homepage = "https://github.com/fastly/Viceroy"
repository = "https://github.com/fastly/Viceroy"
keywords = ["wasm", "fastly"]
categories = [
    "development-tools",
    "network-programming",
    "simulation",
    "wasm"
]
include = [
    "../CHANGELOG.md",
    "../SECURITY.md",
    "src/**/*",
    "compute-at-edge-abi/**/*.witx",
]

[dependencies]
anyhow = "^1.0.31"
bytes = "^1.2.1"
bytesize = "^1.1.0"
cfg-if = "^1.0"
cranelift-entity = "^0.88.1"
fastly-shared = "^0.8.7"
flate2 = "^1.0.24"
futures = "^0.3.24"
http = "^0.2.8"
http-body = "^0.4.5"
hyper = { version = "^0.14.20", features = ["full"] }
itertools = "^0.10.5"
lazy_static = "^1.4.0"
regex = "^1.3.9"
rustls = "^0.19.1"
rustls-native-certs = "^0.5.0"
semver = "^0.10.0"
serde = "^1.0.145"
serde_derive = "^1.0.114"
serde_json = "^1.0.59"
sha2 = "^0.9.9"
thiserror = "^1.0.37"
tokio = { version = "^1.21.2", features = ["full"] }
tokio-rustls = "^0.22.0"
toml = "^0.5.9"
tracing = "^0.1.37"
tracing-futures = "^0.2.5"
url = "^2.3.1"
wasi-common = "^8.0.0"
wasmtime = "^8.0.0"
wasmtime-wasi = "^8.0.0"
wasmtime-wasi-nn = "^8.0.0"
webpki = "^0.21.0"
wiggle = "^8.0.0"

[dev-dependencies]
tempfile = "^3.2.0"

[features]
default = []
test-fatalerror-config = []
