[package]
name = "viceroy-lib"
version = "0.10.2"
description = "Viceroy implementation details."
authors = ["Fastly"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://docs.rs/viceroy-lib"
homepage = "https://github.com/fastly/Viceroy"
repository = "https://github.com/fastly/Viceroy"
keywords = ["wasm", "fastly"]
categories = [
    "development-tools",
    "network-programming",
    "simulation",
    "wasm"
]
include = [
    "../CHANGELOG.md",
    "../SECURITY.md",
    "src/**/*",
    "wit/**/*",
    "compute-at-edge-abi/**/*.witx",
    "data/*.wasm",
]

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.59"
bytes = "^1.2.1"
bytesize = "^1.1.0"
cfg-if = "^1.0"
clap = { workspace = true }
cranelift-entity = "^0.88.1"
fastly-shared = "^0.10.1"
flate2 = "^1.0.24"
futures = { workspace = true }
http = "^0.2.8"
http-body = "^0.4.5"
hyper = { workspace = true }
itertools = { workspace = true }
lazy_static = "^1.4.0"
regex = "^1.3.9"
rustls = "^0.21.1"
rustls-native-certs = "^0.6.3"
rustls-pemfile = "^1.0.3"
semver = "^0.10.0"
serde = "^1.0.145"
serde_derive = "^1.0.114"
serde_json = { workspace = true }
thiserror = "^1.0.37"
tokio = { workspace = true }
tokio-rustls = "^0.24.1"
toml = "^0.5.9"
tracing = { workspace = true }
tracing-futures = { workspace = true }
url = { workspace = true }
wasmparser = { workspace = true }
wasm-encoder = { workspace = true }
wit-component = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-nn = { workspace = true }
wat = { workspace = true }
wiggle = { workspace = true }

[dev-dependencies]
tempfile = "3.6.0"

[features]
default = []
test-fatalerror-config = []
