[package]
name = "test-fixtures"
version = "0.1.0"
description = "Guest wasm programs intended for integration testing."
authors = ["Fastly"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
publish = false

[dependencies]
anyhow = "1.0.86"
base64 = "0.21.2"
fastly = "0.10.4"
fastly-shared = "0.10.4"
fastly-sys = "0.10.4"
hex-literal = "0.4.1"
bytes = "1.0.0"
http = "1.1.0"
rustls-pemfile = "1.0.3"
serde = "1.0.114"
sha2 = "0.10.8"
