[package]
name = "viceroy-component-adapter"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
wasi = { workspace = true }
wit-bindgen-rust-macro = { workspace = true }
byte-array-literals = { workspace = true }
bitflags = { workspace = true }

[build-dependencies]
wasm-encoder = { workspace = true }
object = { workspace = true }

[lib]
test = false
crate-type = ["cdylib"]

[workspace]

[workspace.dependencies]
bitflags = { version = "2.5.0", default-features = false }
byte-array-literals = { path = "./byte-array-literals" }
object = { version = "0.33", default-features = false, features = ["archive"] }
wasi = { version = "0.11.0", default-features = false }
wasm-encoder = { version = "0.236.0", features = ["wasmparser"] }
wit-bindgen-rust-macro = { version = "0.32.0", default-features = false }
wit-component = "0.236.0"

[profile.release.package.xqd-component-adapter]
opt-level = 's'
strip = 'debuginfo'

[profile.dev.package.xqd-component-adapter]
# Make dev look like a release build since this adapter module won't work with
# a debug build that uses data segments and such.
incremental = false
opt-level = 's'
# Omit assertions, which include failure messages which require string
# initializers.
debug-assertions = false
# Omit integer overflow checks, which include failure messages which require
# string initializers.
overflow-checks = false
