[package]
name = "trap-test"
description = "A test to exercise the Viceroy functionality in which a hostcall experiences a FatalError and terminates the instance."
version = "0.1.0"
authors = []
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
publish = false

[dependencies]
anyhow = "1.0.31"
futures = "0.3.0"
http = "0.2.1"
hyper = "0.14.0"
tokio = { version = "1.2", features = ["full"] }
tracing-subscriber = "0.2.19"
viceroy-lib = { path = "../../../lib", features = ["test-fatalerror-config"] }

# To indicate to cargo that this trap-test is not a member of the testing workspace specified by
# ~/cli/tests/fixtures/Cargo.toml, place an empty workspace specification here.
[workspace]
